--- a/.deploy.yaml
+++ b/.deploy.yaml
@@ -1,5 +1,5 @@
-buildscript: malaria24/sideloader/build.sh
-postinstall: malaria24/sideloader/postinstall.sh
+buildscript: sideloader/build.sh
+postinstall: sideloader/postinstall.sh
 pip:
   - gunicorn
   - psycopg2
