getting tests to run

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,7 @@
 [flake8]
 ignore = F403
+
+[pytest]
+DJANGO_SETTINGS_MODULE=malaria24.settings
+addopts = --doctest-modules --verbose --nomigrations --cov=malaria24 --cov-report=term -s ./malaria24
+looponfailroots = malaria24
