--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - pip install -e . --cache-dir $HOME/.pip-cache/
 script:
   - flake8 malaria24
-  - py.test --ds=project.settings --verbose --cov malaria24 malaria24
+  - py.test
 after_success:
   - coveralls
 deploy:
