make tests runs

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,5 +3,5 @@ ignore = F403
 
 [pytest]
 DJANGO_SETTINGS_MODULE=malaria24.settings
-addopts = --doctest-modules --verbose --nomigrations --cov=malaria24 --cov-report=term -s ./malaria24
+addopts = --verbose --nomigrations --reuse-db -s --ignore ve 
 looponfailroots = malaria24
