--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,10 @@ install:
   - pip install -e . --cache-dir $HOME/.pip-cache/
   - echo "ONAPIE_ACCESS_TOKEN = 'foo'" >> malaria24/settings/local.py
   - echo "ONAPIE_FORM_PK = 79925" >> malaria24/settings/local.py
+  - echo "VUMI_GO_ACCOUNT_KEY = 'VUMI_GO_ACCOUNT_KEY'" >> malaria24/settings/local.py
+  - echo "VUMI_GO_API_TOKEN = 'VUMI_GO_API_TOKEN'" >> malaria24/settings/local.py
+  - echo "VUMI_GO_CONVERSATION_KEY = 'VUMI_GO_CONVERSATION_KEY'" >> malaria24/settings/local.py
+
 script:
   - flake8 malaria24
   - py.test --cov=malaria24 --cov-report=term
