national and provincial report done

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,5 @@ ignore = F403
 exclude = ve,migrations,local.py
 
 [pytest]
-DJANGO_SETTINGS_MODULE=malaria24.settings
-addopts = --verbose --nomigrations --reuse-db -s --ignore ve
+addopts = --verbose --nomigrations --reuse-db -s --ignore ve --ds=test_settings
 looponfailroots = malaria24
