--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ cache:
     - $HOME/.pip-cache/
 install:
   - pip install -e git+git://github.com/onaio/onapie.git#egg=onapie
+  - pip install -e .
+  - pip install django-modelcluster==3.1
   - pip install --upgrade pip --cache-dir $HOME/.pip-cache/
   - pip install coveralls --cache-dir $HOME/.pip-cache/
   - pip install flake8 --cache-dir $HOME/.pip-cache/
