--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 django-compressor<1.6
 molo.core==2.4.4
+django-modelcluster==1.1
+django-taggit==0.18.0
 celery==3.1.18
 django-celery==3.1.16
 redis==2.10.3
