add tools for the pytest setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,6 @@
 ignore = F403,E402
 exclude = ve,migrations,local.py
 
-[pytest]
+[tool: pytest]
 addopts = --verbose --nomigrations --reuse-db -s --ignore ve --ds=test_settings --cov=malaria24 --cov-report=term
 looponfailroots = malaria24
