add compress command to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ script:
 
    # check for model changes not reflected in a migration
   - python manage.py makemigrations --dry-run | grep 'No changes detected' || (echo 'There are changes which require migrations.' && exit 1)
+  - python manage.py compress
   - py.test
 after_success:
   - coveralls
