--- a/.travis.yml
+++ b/.travis.yml
@@ -36,5 +36,5 @@ jobs:
         - pip install seaworthy[pytest]
       script:
         - docker build -t malaria .
-        - SECRET_KEY=malaria-test-key pytest seaworthy_docker_test.py
+        - pytest seaworthy_docker_test.py
 
