fix file name of travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,5 +36,5 @@ jobs:
         - pip install seaworthy[pytest]
       script:
         - docker build -t malaria .
-        - pytest seaworthy_docker_test.py
+        - pytest seaworthy_docker.py
 
