--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ jobs:
     dist: xenial
     python: '3.7'
     install:
-      - pip install seaworthy[pytest]
+      - pip install seaworthy[pytest,testtools]
     before_script:
       - docker pull "$IMAGE_NAME" || true
     script:
