--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 django-compressor<1.6
 django-modelcluster==3.1
 django-taggit==0.18.0
+markdown==2.6.5
 molo.core==2.4.4
 celery==3.1.18
 django-celery==3.1.16
