--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,13 @@
-Django<1.9,>=1.8
+Django==1.9
 django-appconf==1.0.3
-django-compressor<1.6
-django-modelcluster==3.1
-django-taggit==0.18.0
-markdown==2.6.5
-molo.core==2.4.4
+django-compressor==3.1
+django-taggit==0.24.0
 celery==3.1.18
-django-celery==3.1.16
-redis==2.10.3
-go_http==0.2.6
-pdfkit==0.5.0
-djangorestframework==3.3.2
-pyopenssl==17.5.0
-ndg-httpsclient==0.4.3
-pyasn1==0.4.2
-requests>=2.4.2
-psycopg2
+redis==3.5.3
+go_http==0.3.2
+djangorestframework==3.9.4
+pyopenssl==21.0.0
+ndg-httpsclient==0.5.1
+requests==2.26.0
+dj-database-url==0.5.0
+raven==6.10.0
