--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Django==1.9
+Django==1.10.8
 django-appconf==1.0.3
 django-compressor==3.1
-django-taggit==0.24.0
+django-taggit==0.22.2
+django-modelcluster==3.1
 celery==3.1.18
 redis==3.5.3
 go_http==0.3.2
