--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Django==1.11.29
-django-appconf==1.0.3
+# django-appconf==1.0.3
 django-compressor==3.1
 django-taggit==0.22.2
-celery==3.1.18
+celery==5.2.1
 redis==3.5.3
 go_http==0.3.2
 djangorestframework==3.9.4
@@ -11,3 +11,4 @@ ndg-httpsclient==0.5.1
 requests==2.26.0
 dj-database-url==0.5.0
 raven==6.10.0
+pdfkit==1.0.0
