--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [flake8]
-ignore = F403,E402
-exclude = ve,migrations,local.py
+ignore = F403,E402,F405,F401
+exclude = ve,migrations,local.py,bin
+max-line-length = 88
 
 [tool:pytest]
 addopts = --verbose --nomigrations --reuse-db -s --ignore ve --ds=test_settings --cov=malaria24 --cov-report=term
