--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,5 @@ requests==2.26.0
 dj-database-url==0.5.0
 raven==6.10.0
 pdfkit==1.0.0
+django-modelcluster==3.1
+-e git://github.com/onaio/onapie.git@cdae8d309c5422fd73dc5aa5b4ce7d7c3b20d822#egg=onapie
