--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -19,6 +19,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -e git+git://github.com/onaio/onapie.git#egg=onapie
+        pip install -e .
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
     - name: Lint with flake8
