--- a/.github/workflows/test_and_build.yml
+++ b/.github/workflows/test_and_build.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e git+git://github.com/onaio/onapie.git#egg=onapie
+        pip install git+git://github.com/onaio/onapie.git#egg=onapie
         pip install -e .
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
