requested fixes from pr 115

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [flake8]
 ignore = F403,E402,F405
-exclude = ve,migrations,local.py,bin,dev.py,production.py,test_settings.py,seaworthy/tests.py,__init__.py
+exclude = ve,migrations,local.py,bin
+per-file-ignores = 
+    dev.py:F401,production.py:F401,test_settings.py:F401,seaworthy/tests.py:F401,__init__.py:F401
 max-line-length = 88
 
 [tool:pytest]
