--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Django==1.11.29
-# django-appconf==1.0.3
-django-compressor==3.1
+# Django<3.0,>2.2.0 #2.2.26
+Django==1.11
+django-compressor
 django-taggit==0.22.2
 celery==5.2.1
 redis==3.5.3
