--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,8 @@
-pytest==4.6.11
-pytest-cov
-pytest-django
-pytest-forked
-pytest-xdist
+pytest==6.2.5
+pytest-cov==3.0.0
+pytest-django==4.5.2
+pytest-forked==1.4.0
+pytest-xdist==2.5.0
 flake8==4.0.1
 responses
 mock
