--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-Django==1.11.29
-django-compressor==3.1
-django-taggit==0.22.2
-celery==5.2.1
-redis==3.5.3
-go_http==0.3.2
-djangorestframework==3.9.4
-pyopenssl==21.0.0
-ndg-httpsclient==0.5.1
-requests==2.26.0
-dj-database-url==0.5.0
-raven==6.10.0
-pdfkit==1.0.0
-django-modelcluster==3.1
+Django==2.0.13
+django-compressor
+django-taggit
+celery
+redis
+go_http
+djangorestframework
+pyopenssl
+ndg-httpsclient
+requests
+importlib-metadata<4.3
+dj-database-url
+raven
+pdfkit
+django-modelcluster
