--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-Django==2.0.13
-django-compressor
-django-taggit
-celery
-redis
-go_http
-djangorestframework
-pyopenssl
-ndg-httpsclient
-requests
+Django==2.2
+django-compressor==3.1
+django-taggit==2.0.0
+celery==5.2.3
+redis==4.1.0
+go-http==0.3.2
+djangorestframework==3.13.1
+pyOpenSSL==21.0.0
+ndg-httpsclient==0.5.1
+requests==2.27.1
 importlib-metadata<4.3
-dj-database-url
-raven
-pdfkit
-django-modelcluster
+dj-database-url==0.5.0
+raven==6.10.0
+pdfkit==1.0.0
+django-modelcluster==5.2
