--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install git+git://github.com/onaio/onapie.git#egg=onapie
+          pip install git+https://github.com/onaio/onapie.git#egg=onapie
           pip install -e .
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
